--- a/index.html
+++ b/index.html
@@ -3,5 +3,5 @@
 <meta charset="utf-8">
 <title>TpF Graphs</title>
 
-<img src="graph/balance.png" alt="Money">
-<img src="graph/vehicles.png" alt="Vehicles">
+<img src="graph/balance.svg" alt="Money">
+<img src="graph/vehicles.svg" alt="Vehicles">
